namespace TransportationCompany.App;

public interface ICargoTransportation
{
    public void LoadingOfCargo();
    public void UnloadingOfCargo();
}