namespace TransportationCompany.App;

public interface IPassengerTransportation
{
    public void BoardingOfPassengers();
    public void DisembarkationOfPassengers();
}